--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 </div>
 
 <div class="container">
-<div class="item"><span class="days"></span> <span class="days-info">dagen</span></div>
-<div class="item"><span class="hours"></span> <span class="hours-info">uren</span></div>
-<div class="item"><span class="minutes"></span> <span class="minutes-info">minuten</span></div>
-<div class="item"><span class="seconds"></span> <span class="seconds-info">seconden</span></body>
+<div class="item hidden"><span>Nog</span></div>
+<div class="item hidden"><span class="days"></span> <span class="days-info">dagen</span></div>
+<div class="item hidden"><span class="hours"></span> <span class="hours-info">uren</span></div>
+<div class="item hidden"><span class="minutes"></span> <span class="minutes-info">minuten</span></div>
+<div class="item hidden"><span class="seconds"></span> <span class="seconds-info">seconden</span></div>
+<div class="item toHide"><bold>De GameJam is nog niet begonnen</bold></div>
 </div>
 
 </div>
@@ -28,41 +30,50 @@
 <script>
 var socket = io();
 socket.on('tick', function(timeLeft) {
-  var plurals = {
-    days: {
-      singular: "dag",
-      plural: "dagen"
-    },
-    hours: {
-      singular: "uur",
-      plural: "uren"
-    },
-    minutes: {
-      singular: "minuut",
-      plural: "minuten"
-    },
-    seconds: {
-      singular: "seconde",
-      plural: "seconden"
+  if (timeLeft.started)
+  {
+    $(".hidden").removeClass("hidden");
+    $(".toHide").addClass("hidden");
+    var plurals = {
+      days: {
+        singular: "dag",
+        plural: "dagen"
+      },
+      hours: {
+        singular: "uur",
+        plural: "uren"
+      },
+      minutes: {
+        singular: "minuut",
+        plural: "minuten"
+      },
+      seconds: {
+        singular: "seconde",
+        plural: "seconden"
+      }
     }
+    console.log(timeLeft.percentage);
+    var start = moment(timeLeft.start);
+    var end = moment(timeLeft.end);
+    t = end.diff(start);
+    var seconds = Math.floor( (t/1000) % 60 );
+    var minutes = Math.floor( (t/1000/60) % 60 );
+    var hours = Math.floor( (t/(1000*60*60)) % 24 );
+    var days = Math.floor( t/(1000*60*60*24) );
+    $(".days").html(days);
+    $(".days-info").html(pluralize(days, plurals.days))
+    $(".hours").html(hours);
+    $(".hours-info").html(pluralize(hours, plurals.hours))
+    $(".minutes").html(minutes);
+    $(".minutes-info").html(pluralize(minutes, plurals.minutes))
+    $(".seconds").html(seconds);
+    $(".seconds-info").html(pluralize(seconds, plurals.seconds))
+    $("#background-progress").css("width", (100*(timeLeft.percentage))+"%");
+  } else {
+    $(".item").addClass("hidden");
+    $(".toHide").removeClass("hidden");
+    $("#background-progress").css("width", (100*(timeLeft.percentage))+"%");
   }
-  console.log(timeLeft.percentage);
-  var start = moment(timeLeft.start);
-  var end = moment(timeLeft.end);
-  t = end.diff(start);
-  var seconds = Math.floor( (t/1000) % 60 );
-  var minutes = Math.floor( (t/1000/60) % 60 );
-  var hours = Math.floor( (t/(1000*60*60)) % 24 );
-  var days = Math.floor( t/(1000*60*60*24) );
-  $(".days").html(days);
-  $(".days-info").html(pluralize(days, plurals.days))
-  $(".hours").html(hours);
-  $(".hours-info").html(pluralize(hours, plurals.hours))
-  $(".minutes").html(minutes);
-  $(".minutes-info").html(pluralize(minutes, plurals.minutes))
-  $(".seconds").html(seconds);
-  $(".seconds-info").html(pluralize(seconds, plurals.seconds))
-  $("#background-progress").css("width", (100*(timeLeft.percentage))+"%");
 });
 
 function zeroPad(num, places) {
