--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 </div>
 
+<div id="sticky-logo"></div>
+<div id="dgdarc-logo"></div>
+
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
